# SmsSpamClassify

./: CHelperReport.txt  README.md  SMSNER.config  chelper.properties  smsUnderstand.config
data/: ECM.statistics  NB.model  baidu5000_normalMiss.txt  brackets_entropy.txt  brackets_entropy1.txt  composedEmojis.in  composedEmojis.txt  mergedCopy.txt  model  newdict  parze.js  refined.dic  refined.dic.originFreq  sms_20140806.txt  test_data_14.10.17.txt
data/NLP/: 10010.txt  10010.txt.ext  10010.txt.ext.1  10086.txt  10086_part  bug.txt  bug.txt.ext  cluster.10010.txt  filterDict.txt  g1.txt  g1.txt.ext  g2.txt  g2.txt.ext  g3.txt  g3.txt.ext  g4.txt  g4.txt.ext  g4.txt.ext.1  test.txt  test.txt.ext  testCorpus.txt  testCorpus.txt.ext  test_10.txt.ext  test_10.txt.ext.1  test_bound.txt  test_bound.txt.ext  test_bound.txt.ext.1  test_large.txt  test_large.txt.ext  test_real.txt  test_real.txt.ext  test_small.txt
data/pennyjob/: 1.part  3.part  4.part  5.part
lib/NER/: SMSNER.config  readme.txt
lib/WordsSegment/: .cproject  .project
lib/WordsSegment/src/: CMakeLists.txt  Makefile  Segment.cpp  Segment.d  com_xiaomi_smsspam_Segment.h  com_xiaomi_smsspam_Utils_Tokenizer.h
lib/WordsSegment/src/jieba/: CMakeLists.txt  HMMSegment.hpp  MIGPSegment.hpp  MixSegment.hpp  Mix_MIGP_HMM_Segment.hpp  Trie.hpp  TrieChanged.hpp  a.out  segment.cpp  segment.d
lib/WordsSegment/src/jieba/test/testdata/: testlines.utf8
modelOut/: DifferentStrings.java
src/: EllysCandyGame.java  TallShoes.java  TestLambda.java
src (复件)/: TestMahout.java
src/CFRS/: TestMahout.java
src/TC/: AliceGame.java  AliceGame.tctask  AliceGameEasy.java  B - Super 2048.task  BoardFolding.java  BoardFolding.tctask  BoardFoldingDiv2.java  BuyingTshirts.java  BuyingTshirts.tctask  CandyCupRunningCompetition.java  ChocolateDividingEasy.tctask  ConnectingGameDiv2.java  ConnectingGameDiv2.tctask  DifferentStrings.java  DifferentStrings.tctask  Egalitarianism3.java  Egalitarianism3.tctask  ElectronicPetEasy.java  EllysCandyGame.java  ForgetfulAddition.java  GCDLCMEasy.java  GameOfStones.java  (+40 more)
(+174 files in other folders)
